fixed styling issue in FlatCard. Pic was covering text

--- a/styles/kc.module.css
+++ b/styles/kc.module.css
@@ -1,6 +1,7 @@
 .KC .hero {
   min-height: 0;
   padding-top: 6rem;
+  border: 1px red solid;
 }
 
 .KC .info {
